--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: no style, please! # name of the site
-author: Riccardo Graziosi # name of site's author
-email: riccardo.graziosi97@gmail.com # email of site's author
-url: https://riggraz.dev # root address of the site
-baseurl: "/no-style-please" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+title: WJ의 정신없는 개발일지 # name of the site
+author: WONJIN, JUNG # name of site's author
+email: wonjin85.kbsi.re.kr # email of site's author
+url: https://wonjinjung.github.io # root address of the site
+baseurl: "/blog" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
   A (nearly) no-CSS, fast, minimalist Jekyll theme.
 
