--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: WJ의 정신없는 개발일지 # name of the site
 author: WONJIN, JUNG # name of site's author
 email: wonjin85.kbsi.re.kr # email of site's author
 url: https://wonjinjung.github.io # root address of the site
-baseurl: "" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+baseurl: "/blog" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > - # description of the site (multiple lines allowed)
   
 
