--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -15,6 +15,14 @@ entries:
       show_more_text: See archive...
       show_more_url: archive.html
 
+  - title: Data Analysis
+    post_list:
+      category: da
+      show_more: true
+      show_more_text: See more posts...
+      show_more_url: da-archive.html
+
+
   - title: posts by category
     post_list:
       category: example2
