--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -15,17 +15,11 @@ entries:
       show_more_text: See archive...
       show_more_url: archive.html
 
-  - title: Data Analysis
-    post_list:
-      category: da
-      show_more: true
-      show_more_text: See more posts...
-      show_more_url: da-archive.html
-
-
   - title: posts by category
-    post_list:
-      category: example2
-      show_more: true
-      show_more_text: See more posts...
-      show_more_url: example2-archive.html
+    entries:
+    - title: Data Analysis
+      post_list:
+        category: da
+        show_more: true
+        show_more_text: See more posts...
+        show_more_url: da-archive.html
