--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,7 +4,7 @@
 entries:
   - title: me
     entries:
-      - title: Engineering Support Team in KBSI (South Korea)
+      - title: Engineering Support Team in KBSI (Seoul, South Korea)
       - title: email
         url: mailto:wonjin85@kbsi.re.kr
 
