--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -7,6 +7,8 @@ entries:
       - title: Engineering Support Team in KBSI (Seoul, South Korea)
       - title: email
         url: mailto:wonjin85@kbsi.re.kr
+      - title : about
+        url: about.md
 
   - title: all posts
     post_list:
