--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -8,7 +8,7 @@ entries:
       - title: email
         url: mailto:wonjin85@kbsi.re.kr
       - title : about
-        url: about.md
+        url: about
 
   - title: all posts
     post_list:
