--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -17,7 +17,7 @@ entries:
         category: sa
         show_more: true
         show_more_text: See more posts...
-        show_more_url: archive.html
+        show_more_url: sa-archive.html
 
     - title: 다양한 데이터
       post_list:
