--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: WJ의 정신없는 개발일지 # name of the site
+title: WJ의 정신없는 일상 # name of the site
 author: WONJIN, JUNG # name of site's author
 email: wonjin85.kbsi.re.kr # email of site's author
 url: https://wonjinjung.github.io # root address of the site
