--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: WJ의 정신없는 일상 # name of the site
 author: WONJIN, JUNG # name of site's author
-email: wonjin85.kbsi.re.kr # email of site's author
+email: wingspoet@gmail.com # email of site's author
 url: https://wonjinjung.github.io # root address of the site
 baseurl: "" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: >- # description of the site (multiple lines allowed)
@@ -16,7 +16,7 @@ theme_config:
   appearance: "auto" # can be "light", "dark" or "auto"
   back_home_text: ".." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
-  show_description: false # show blog description in home page
+  show_description: true # show blog description in home page
 
 sass:
   style: compressed
